--- a/css/main.css
+++ b/css/main.css
@@ -134,7 +134,7 @@ box-shadow: 0 1px 40px rgba(0, 0, 0, 0.75),inset 0 -1px 0 rgba(0, 0, 0, 0.7);
 
 .topbar .right_area .login_area{
   float: left;
-  width:50%;
+  width:  %;
   height: 70px; 
 }
 
