--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,3 @@
-
-
 /* Add new Widget wizard */
 .addNewWidget {
 	text-align: center;
@@ -381,19 +379,14 @@ background: url('../img/noise.png');
 /* End Columns section */
 
 
-
-
 #map{
 width: auto;
 display: block;
-    height: 300px;
-    margin: 0px auto;
+height: 400px;
+margin: 0px auto;
 }
 
 .left        { float: right; }
-
-
-
 
 
 #dvLoading
@@ -405,7 +398,10 @@ display: block;
    z-index: 10000;
 }
 
-div.growlUI { background: url(../img/check.png) no-repeat 10px 10px }
+div.growlUI {
+    background: url(../img/check.png) no-repeat 10px 10px
+}
+
 div.growlUI h1, div.growlUI h2 {
     color: white; padding: 5px 5px 5px 75px; text-align: left
 }
