--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,9 +1,9 @@
 /* Add new Widget wizard */
 .addNewWidget {
-	text-align: center;
-	
-	border: 2px dashed #999;
-	margin: 30px 3px 0 25px;
+  text-align: center;
+  
+  border: 2px dashed #999;
+  margin: 30px 3px 0 25px;
 
 }
 
@@ -62,7 +62,7 @@
 
 
 .topbar a{
-	color: #fff;
+  color: #fff;
 }
 
 .topbar {
@@ -70,9 +70,9 @@
   top:0;
   left:0;
   width:100%;
-	height: 70px;	
-	background: #000;
-	z-index: 1001;
+  height: 70px; 
+  background: #000;
+  z-index: 1001;
 
 background: url(../img/topheader.png);
 
@@ -85,48 +85,48 @@ box-shadow: 0 1px 40px rgba(0, 0, 0, 0.75),inset 0 -1px 0 rgba(0, 0, 0, 0.7);
 
 
 .page-header {
-	background: url('../img/noise.png');
-    	color: #FAFDFA;
-	font-weight: bold;
-   	text-align: center;
-	margin: 0px;
-	padding-top: 20px;
-	padding-bottom: 20px;
+  background: url('../img/noise.png');
+      color: #FAFDFA;
+  font-weight: bold;
+    text-align: center;
+  margin: 0px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .topbar #logos{
-	margin-left: 10em;
+  margin-left: 10em;
 }
 
 .topbar #logoimage{
-	display: inline;
-	float: left;
-	max-height: 65px;
-	margin-right: 3em;
+  display: inline;
+  float: left;
+  max-height: 65px;
+  margin-right: 3em;
 }
 
 .topbar #logotext{
-	display: inline;
-	font-size: 40px;
-	text-decoration: none;
-	text-align: center;
-	color: #fff;
-	float:left;
-	
-	line-height: 70px;
+  display: inline;
+  font-size: 40px;
+  text-decoration: none;
+  text-align: center;
+  color: #fff;
+  float:left;
+  
+  line-height: 70px;
 }
 
 .topbar #logotext a{
-	display: inline;
-	color: #fff;
-	text-decoration: none;
+  display: inline;
+  color: #fff;
+  text-decoration: none;
 
 }
 
 .topbar .right_area{
   color: white;
   float: right;
-  width:50%;
+  width:30%;
   height: 70px; 
 }
 
@@ -137,9 +137,9 @@ box-shadow: 0 1px 40px rgba(0, 0, 0, 0.75),inset 0 -1px 0 rgba(0, 0, 0, 0.7);
 }
 
 .topbar .icon{
-	float:right;
-	padding-top: 16px;
-	margin-left: 10px;
+  float:right;
+  padding-top: 16px;
+  margin-left: 10px;
 }
 
 .topbar .icon:hover{
@@ -161,11 +161,11 @@ box-shadow: 0 1px 40px rgba(0, 0, 0, 0.75),inset 0 -1px 0 rgba(0, 0, 0, 0.7);
 
 
 .resultswidget-header{
-	padding-left: 10px;
-	border-bottom:1px dashed #B6B9B3;
-	background: #585856;
-	color: #fff;
-	
+  padding-left: 10px;
+  border-bottom:1px dashed #B6B9B3;
+  background: #585856;
+  color: #fff;
+  
 }
 
 #pager,
@@ -182,7 +182,7 @@ box-shadow: 0 1px 40px rgba(0, 0, 0, 0.75),inset 0 -1px 0 rgba(0, 0, 0, 0.7);
 .links li {
   list-style-type: none;
   display: inline;
-		
+    
 }
 #pager a{
   color: #fff;
@@ -190,21 +190,27 @@ box-shadow: 0 1px 40px rgba(0, 0, 0, 0.75),inset 0 -1px 0 rgba(0, 0, 0, 0.7);
 
 
 .graphics{
-	width: 100%;
-	margin: 0px auto;
+  width: 100%;
+  margin: 0px auto;
 }
 
 #docs{
   margin-top:10px;
 }
 
-
-
-
 .resultado{
-   margin-top: 10px;
-   padding: 0 5px;
-   margin: 10px;
+   padding: 7px;
+   margin: 5px;
+}
+
+.resultado_positivo {
+  background-color: #66FF66;
+  border-radius: 10px
+}
+
+.resultado_negativo {
+  background-color: #FF6665;
+  border-radius: 10px;
 }
 
 
@@ -229,57 +235,57 @@ color:#000;
 
 
 #configuration{
-	text-align: center;
-	font-size: 12px;
-	background: #f5f5f5;
-	width: 100%;
-	position: absolute;
-	top: 70px;
-	
-	border-bottom: solid 1px #000; 
-	/*-webkit-box-shadow: 0px 0px 80px rgba(0, 0, 0, 0.5);  
-	-moz-box-shadow: 0px 0px 80px rgba(0, 0, 0, 0.5); */
+  text-align: center;
+  font-size: 12px;
+  background: #f5f5f5;
+  width: 100%;
+  position: absolute;
+  top: 70px;
+  
+  border-bottom: solid 1px #000; 
+  /*-webkit-box-shadow: 0px 0px 80px rgba(0, 0, 0, 0.5);  
+  -moz-box-shadow: 0px 0px 80px rgba(0, 0, 0, 0.5); */
 }
 
 
 #configuration input {
-	width: 30em;
-	margin-bottom: 10px;
+  width: 30em;
+  margin-bottom: 10px;
 }
 
 #configuration select {
-	width: 30em;
-	margin-bottom: 10px;
+  width: 30em;
+  margin-bottom: 10px;
 }
 
 #configuration p{
-	padding-bottom: 20px;
+  padding-bottom: 20px;
 }
 
 #configuration h2{
-	font-size: 24px;
-	width:100%;
-	padding:10px;
+  font-size: 24px;
+  width:100%;
+  padding:10px;
 }
 
 #configuration h3{
-	padding-bottom: 10px;
-	font-size: 18px;
+  padding-bottom: 10px;
+  font-size: 18px;
 }
 
 #configuration .col1{
-	text-align: center;
-	float:left;
-	width: 49%;
-	padding:10px;
+  text-align: center;
+  float:left;
+  width: 49%;
+  padding:10px;
 
 }
 
 #configuration .col2{
-	text-align: center;
-	float:right;
-	width:48%;
-	padding:10px;
+  text-align: center;
+  float:right;
+  width:48%;
+  padding:10px;
 
 }
 
@@ -308,16 +314,16 @@ background: url('../img/noise.png');
 .color-yellow h3,
 .color-white h3 {color:#FFF}
 .color-green h3
-	{color:#000;}
+  {color:#000;}
 .color-red h3,
 .color-blue h3,
 .color-orange h3
-	{color:#FFF;}
+  {color:#FFF;}
 /* End Colors */
 
 
 .maincontent {
-	
+  
 
 }
 
@@ -330,9 +336,9 @@ background: url('../img/noise.png');
     margin: 0 auto;
 
     /* Min-height: */
-		min-height: 500px;
-		height: auto !important; 
-		height: 500px;
+    min-height: 500px;
+    height: auto !important; 
+    height: 500px;
 }
 
 .ui-resizable-handle {
@@ -346,17 +352,17 @@ background: url('../img/noise.png');
 #columns #column0tab0 { float: left; width:40%; }
 #columns #column1tab0 { float: left; width:58%; }
 
-#columns #column0tab0 .ui-widget { margin: 30px 3px 0 25px; }	
+#columns #column0tab0 .ui-widget { margin: 30px 3px 0 25px; } 
 #columns #column1tab0 .ui-widget { margin: 30px 3px 0 25px; }
 
 #columns #column0tab1 { float: left; width:40%; }
 #columns #column1tab1 { float: left; width:58%; }
 
-#columns #column0tab1 .ui-widget { margin: 30px 3px 0 25px; }	
+#columns #column0tab1 .ui-widget { margin: 30px 3px 0 25px; } 
 #columns #column1tab1 .ui-widget { margin: 30px 3px 0 25px; }
 
 .widget-placeholder { 
-	border: 2px dashed #819bcb;
+  border: 2px dashed #819bcb;
 }
 .column .widget-placeholder { margin: 30px 3px 0 25px; }
 
@@ -371,7 +377,7 @@ background: url('../img/noise.png');
 }
 
 .container{
-	min-height:10px;
+  min-height:10px;
 }
 
 
@@ -391,7 +397,7 @@ margin: 0px auto;
 
 #dvLoading
 {
-	background: #fff url(../img/loading_animation.gif) no-repeat center center;
+  background: #fff url(../img/loading_animation.gif) no-repeat center center;
    height: 100%;
    width: 100%;
    position: fixed;
@@ -418,8 +424,8 @@ color: #000;
 }
 
 .footer h1{
-	margin-left: 45px;
-	margin-bottom: 10px;
+  margin-left: 45px;
+  margin-bottom: 10px;
 }
 
 .gsiLogo{
@@ -445,18 +451,18 @@ color: #000;
 
 .sefaradLogo{
 
-	background: url("../img/sefarad_logop2small.png") no-repeat;
+  background: url("../img/sefarad_logop2small.png") no-repeat;
 }
 
 .clearfix:before,.clearfix:after{content:"";display:table}.clearfix:after{clear:both}.clearfix{*zoom:1}
 
 
 .tag {
-	display: inline-block;
+  display: inline-block;
 
     margin:0 0 7px 20px;
     position:relative;
-	
+  
     font-family:'Helvetica Neue', Helvetica, Arial, sans-serif;
     font-size:0.9em;
     font-weight:bold;
@@ -494,7 +500,7 @@ color: #000;
         0 1px 1px rgba(0,0,0,.1);
 
     z-index:2;
-	
+  
 }
 
 .tag:before {
@@ -531,7 +537,7 @@ color: #000;
     border-radius:0 0 0 0.25em;
 
     z-index:1;
-	
+  
 }
 
 .tag:after {
@@ -695,104 +701,104 @@ body.editing #configuration_button:hover {
 
 .tagarea{
   margin: 10px 10px 10px 20px;
-			
+      
 }
 
 
 /* UNUSED */
 .imagen{
-	float:right;
-	margin-right: 5px;
-	margin-left: 5px;
-	border: 2px solid #000;		
+  float:right;
+  margin-right: 5px;
+  margin-left: 5px;
+  border: 2px solid #000;   
 }
 
 .imagen:hover{
-	border: 2px solid #40b1db;	
+  border: 2px solid #40b1db;  
 }
 
 
 
 /* SPARQL query */
-	
-/* Positions the contact form so it doesn't interfere with any other content, as well as a z-index above any other elements on the page */	
+  
+/* Positions the contact form so it doesn't interfere with any other content, as well as a z-index above any other elements on the page */  
 #sparqlQueryContainer {
-	position:absolute;
-	left:0em;
-	z-index:12;
-	}
-	
-/* Hides the whole contact form until needed */	
+  position:absolute;
+  left:0em;
+  z-index:12;
+  }
+  
+/* Hides the whole contact form until needed */ 
 #sparqlQueryPanel {
-	height:200px;width:558px;
-	background:#515151;
-	border:1px solid #929191;
-	padding:7px;
-	color:#fff;
-	display:none;
-	border-bottom-left-radius: 5px;
-	border-bottom-right-radius: 5px;	
+  height:200px;width:558px;
+  background:#515151;
+  border:1px solid #929191;
+  padding:7px;
+  color:#fff;
+  display:none;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;  
 }   
 
 #sparqlQueryPanel textarea{
-	height:100%;
-	width:100%;
+  height:100%;
+  width:100%;
 }   
-	
-	
+  
+  
 /* Some styling for the contact button */
 #sparqlQueryContainer .sparqlquery {
-	height:37px; width:211px;
-	background: #515151; 
-	position:absolute; 
-	left:2em; bottom:-37px; 
-	cursor:pointer;
-	border:1px solid #929191;	
-	border-top: 0px;
-	border-bottom-left-radius: 5px;
-	border-bottom-right-radius: 5px;
+  height:37px; width:211px;
+  background: #515151; 
+  position:absolute; 
+  left:2em; bottom:-37px; 
+  cursor:pointer;
+  border:1px solid #929191; 
+  border-top: 0px;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
-	
+  
 /* Some styling for the contact button */
 #sparqlQueryContainer .sparqlquery h2 {
-	color: #fff;
-	text-align: center;
-	padding-top: 8px;
+  color: #fff;
+  text-align: center;
+  padding-top: 8px;
   transition:color 0.2s ease-in;
   -moz-transition:color 0.2s ease-in; /* FF3.7+ */
   -o-transition:color 0.2s ease-in; /*  Opera 10.5 */
   -webkit-transition:color 0.2s ease-in; /* Saf3.2+, Chrome */
-}	
+} 
 
 #sparqlQueryContainer .sparqlquery h2:hover{
   color: #00b7f1;
   cursor: pointer;
 }
-			
-/* Hides the darkening layer for the Modal effect. The z-index is necessary for layering purposes, and be sure to keep the positioning/height/width the same */	
+      
+/* Hides the darkening layer for the Modal effect. The z-index is necessary for layering purposes, and be sure to keep the positioning/height/width the same */ 
 #backgroundPopup{
-	display:none; 
-	position:fixed; 
-	_position:absolute; 
-	height:100%; width:100%; 
-	top:0; left:0;
-	background:#000; 
-	z-index:10;
+  display:none; 
+  position:fixed; 
+  _position:absolute; 
+  height:100%; width:100%; 
+  top:0; left:0;
+  background:#000; 
+  z-index:10;
 }  
 
 .tab{
-	padding: 10px; cursor: pointer;
+  padding: 10px; cursor: pointer;
 }
 
 .activetab{
-	padding-top: 20px;
-	font-size: 15px;
-	font-weight: bold;
-	color: #ffbe0c;
+  padding-top: 20px;
+  font-size: 15px;
+  font-weight: bold;
+  color: #ffbe0c;
 }
 
 .hiddenfield {
-	display: none;
+  display: none;
 }
 
 .tabrow {
@@ -842,7 +848,7 @@ body.editing #configuration_button:hover {
 }
 
 .tabrow :hover {
-	color: #ffbe0c;
+  color: #ffbe0c;
 }
 
 .tabrow:before {
@@ -934,3 +940,4 @@ svg {
   fill-opacity: .125;
   shape-rendering: crispEdges;
 }
+
