sparql editor updated

--- a/src/css/themes/smod/theme.css
+++ b/src/css/themes/smod/theme.css
@@ -214,9 +214,8 @@ color: #867B0C;
     text-align: left;
 }
 
-.CodeMirror-scroll {
-    overflow-y: scroll;
-    overflow-x: auto;
+.CodeMirror {
+
     height: 500px;
 
 }
