sparql editor updated

--- a/src/css/themes/smod/theme.css
+++ b/src/css/themes/smod/theme.css
@@ -216,6 +216,12 @@ color: #867B0C;
 
 .CodeMirror {
 
+    height: 400px;
+    overflow-y: auto;
+
+}
+
+.CodeMirror-lines {
     height: 500px;
 
 }
