- Load query now from json file
ERROR - Not support reading localStorage

--- a/web/common.css
+++ b/web/common.css
@@ -24,3 +24,8 @@ html /deep/ .size-position::shadow #scroller {
     font-size: 1.3em;
     margin-left: 3px;
 }
+
+#buttonParam{
+    background-color: transparent;
+    border: none;
+}
