-Now is possible to choose the web service endpoint

--- a/web/newquery.css
+++ b/web/newquery.css
@@ -50,15 +50,7 @@
 
 #params{
     display: none;
-}
-
-#paramSelector{
-    display: none;
-}
-
-#paramName{
-    display: none;
-    margin-left:20px
+    margin-top: 10px;
 }
 
 #paramList{
