- Now it's possible retrieve data from Mongodb (only open DB) - Open register, User login WIP - Together Sparql and Mongodb editor

--- a/web/common.css
+++ b/web/common.css
@@ -47,3 +47,13 @@ html /deep/ .size-position::shadow #scroller {
     margin-top: 0;
     text-align: center;
 }
+
+#divMongodb{
+    display: none;
+}
+
+#table {
+    background-color: #ffffff;
+    width: 100%;
+    padding: 15px;
+}
