--- a/elements/dashboard-tourpedia/dashboard-tourpedia.css
+++ b/elements/dashboard-tourpedia/dashboard-tourpedia.css
@@ -28,13 +28,13 @@
     }
 
     paper-tabs, paper-toolbar {
-      background-color: var(--default-primary-color); 
+      background-color: #04419B; 
       color: #fff;
       box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
     }
 
     paper-tabs[noink][no-bar] paper-tab.iron-selected {
-      color: var(--accent-color);
+      color: #04419B;
     }
       #content, .announcement {
         max-width: 790px;
