--- a/elements/my-greeting/my-greeting.css
+++ b/elements/my-greeting/my-greeting.css
@@ -56,7 +56,7 @@
       background-image: url(/images/dashboard.png);
       background-size: cover;
       border-radius: 70px;
-      margin: 8px auto;
+      margin: 2px auto;
       z-index: 0
     }
 
@@ -66,7 +66,7 @@
       background-image: url(/images/absa.png);
       background-size: cover;
       border-radius: 70px;
-      margin: 8px auto;
+      margin: 2px auto;
       z-index: 0
     }
 
@@ -76,14 +76,14 @@
       background-image: url(/images/ftt.png);
       background-size: cover;
       border-radius: 70px;
-      margin: 8px auto;
+      margin: 2px auto;
       z-index: 0
     }
 
     .circletag4 {
       height: 100px;
       width: 100px;
-      background-image: url(/images/speed.jpeg);
+      background-image: url(/images/footballmood.png);
       background-size: cover;
       border-radius: 70px;
       margin: 2px auto;
